--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,61 @@
-.App {
-  text-align: center;
+body {
+    background-color: peru;
+    display: flex;
+    justify-content: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.container {
+    display: block;
+    width: 500px;
+    margin-top: 120px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title {
+    text-align: center;
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.new-task {
+    display: block;
+    width: 100%;
+    background-color: azure;
+    border-radius: 10px;
+    height: 40px;
+    border-color: aquamarine;
+    border-width: 4px;
+    text-align: center;
+    font-size: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.test-label {
+    text-align: center;
+    color: white;
+}
+
+.task-container {
+    width: 100%;
+    background-color: azure;
+    margin-bottom: 8px;
+    font-size: 16px;
+    border-left: 8px solid aqua !important;
+}
+
+.task {
+    margin: 0;
+    padding: 10px 0px 10px 10px;
+}
+
+.delete-button {
+    background-color: black;
+    border-radius: 13px;
+    height: 23px;
+    color: white;
+    border-width: 0px;
+    font-weight: bolder;
+}
+
+.button-container {
+    position: relative;
+    float: right;
+    margin: -32px 10px;
 }
